Update gc.md